Close remaining #3347 gaps: trace screenshots, direct HTML attach, IntelliJ trace viewer, sharded merge
Most of issue #3347 (Trace Viewer + sharded execution/merged report) was
already implemented by an earlier merge; this closes the documented
remaining gaps rather than rebuilding from scratch.

Trace Viewer (D2):
- Persist screenshots keyed by traceActionId: TraceEventRecorder buffers a
  screenshot per action (bounded by shaft.trace.maxArtifactMb), embeds it as
  base64 in the trace JSON, and FailureTraceReporter additionally writes
  screenshots/<actionId>.png into the trace zip/directory plus an additive
  index.json entries.screenshots field. The offline viewer HTML gains a
  Screenshot tab and a filmstrip marker in the action list.
- Attach the viewer HTML directly to Allure (not just zip-wrapped).
- New IntelliJ "Show SHAFT Trace Viewer" action, using an external-browser
  fallback (BrowserUtil.browse) rather than an embedded JCEF panel -- the
  plugin has no JCEF precedent and its tests run headless, so an embedded
  panel would be unverifiable by automated tests. Trace resolution logic is
  pure filesystem code, unit-tested headless.
- CSSOM capture via Selenium BiDi remains explicitly deferred: BiDi support
  exists only in shaft-capture, shaft-engine has no dependency on
  shaft-capture, and an engine-wide BiDi lifecycle isn't guaranteed across
  every driver backend (grid/BrowserStack/Playwright/Appium).

Sharded execution + merged report (D8):
- New scripts/ci/assemble_shard_blob.py stages a shard's allure-results +
  shaft-traces + optional doctor execution-intelligence.json into the
  ShardBlob layout ShardMerger already reads (shaft-engine has no
  dependency on shaft-doctor, so this has to be a post-test step, not an
  engine-side hook).
- ShardMerger now copies each shard's shaft-traces through into the merged
  output (namespaced by shard id), and reads/aggregates per-shard
  ExecutionIntelligence into a new "Doctor triage across shards" speedboa